--- a/cpd-portal/src/app/pages/admin/user-list/user-list.component.html
+++ b/cpd-portal/src/app/pages/admin/user-list/user-list.component.html
@@ -6,15 +6,6 @@
   </div>
 
   <table>
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Job Title</th>
-        <th>Access Level</th>
-        <th>Actions</th>
-      </tr>
-    </thead>
     <tbody>
       <tr *ngFor="let user of users">
         <td>{{ user.first_name }} {{ user.last_name }}</td>
@@ -23,9 +14,23 @@
         <td>{{ user.access_level }}</td>
         <td>
           <button class="edit-btn">Edit</button>
-          <button class="delete-btn">Delete</button>
+          <button
+            class="delete-btn"
+            (click)="promptDeleteUser(user.id, user.first_name + ' ' + user.last_name)">
+            Delete
+          </button>
         </td>
       </tr>
     </tbody>
   </table>
 </div>
+
+<app-confirm-modal
+  [isVisible]="showDeleteConfirmModal"
+  title="Confirm Deletion"
+  [message]="'Are you sure you want to delete the user \'' + userToDeleteName + '\'?'"
+  confirmButtonText="Delete User"
+  cancelButtonText="Cancel"
+  (confirmed)="confirmDelete()"
+  (cancelled)="cancelDelete()">
+</app-confirm-modal>
