--- a/cpd-portal/src/app/pages/admin/user-list/user-list.component.html
+++ b/cpd-portal/src/app/pages/admin/user-list/user-list.component.html
@@ -5,26 +5,36 @@
     <a routerLink="/admin/users/new" class="add-user-btn">+ Add User</a>
   </div>
 
-  <table>
-    <tbody>
-      <tr *ngFor="let user of users">
-        <td>{{ user.first_name }} {{ user.last_name }}</td>
-        <td>{{ user.email }}</td>
-        <td>{{ user.job_title }}</td>
-        <td>{{ user.access_level }}</td>
-        <td>
-          <button class="edit-btn">Edit</button>
-          <button
-            class="delete-btn"
-            (click)="promptDeleteUser(user.id, user.first_name + ' ' + user.last_name)">
-            Delete
-          </button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-
+  <div class="table-responsive">
+    <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Email</th>
+          <th>Job Title</th>
+          <th>Access Level</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let user of users">
+          <td>{{ user.first_name }} {{ user.last_name }}</td>
+          <td>{{ user.email }}</td>
+          <td>{{ user.job_title }}</td>
+          <td>{{ user.access_level }}</td>
+          <td>
+            <button class="edit-btn">Edit</button>
+            <button
+              class="delete-btn"
+              (click)="promptDeleteUser(user.id, user.first_name + ' ' + user.last_name)">
+              Delete
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  </div>
 <app-confirm-modal
   [isVisible]="showDeleteConfirmModal"
   title="Confirm Deletion"
