--- a/cpd-portal/src/app/pages/admin/user-list/user-list.component.html
+++ b/cpd-portal/src/app/pages/admin/user-list/user-list.component.html
@@ -23,7 +23,7 @@
           <td>{{ user.job_title }}</td>
           <td>{{ user.access_level }}</td>
           <td>
-            <button class="edit-btn">Edit</button>
+            <button class="edit-btn" [routerLink]="['/admin/users/edit', user.id]">Edit</button>
             <button
               class="delete-btn"
               (click)="promptDeleteUser(user.id, user.first_name + ' ' + user.last_name)">
